style.css
@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
@import url('https://fonts.googleapis.com/css?family=Press Start 2P');
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer utilities {
      /* Hide scrollbar for Chrome, Safari and Opera */
      .no-scrollbar::-webkit-scrollbar {
          display: none;
      }
     /* Hide scrollbar for IE, Edge and Firefox */
      .no-scrollbar {
          -ms-overflow-style: none;  /* IE and Edge */
          scrollbar-width: none;  /* Firefox */
    }
}



*::-webkit-scrollbar {
  width: 25px;
  height: 100px;
	background-color: transparent;
}

.tracks-body-text::-webkit-scrollbar
{
  width: 25px;
  height: 100px;
	background-color: #0F283F00;
}

.tracks-topics::-webkit-scrollbar
{
	width: 25px;
  height: 100px;
	background-color: #48727E00;
}

.tracks-topics {
  height: 20rem;
}

@media screen and (max-width: 768px){
  .tracks-topics {
    height: 16rem;
  }
}

@supports (-moz-animation: none) {
  .tracks-scrollbar {
    display: none;
  } 
  .scrollbar-wrapper {
    border-right: 2px black solid;
  }
  .tracks-topics {
    height: 25rem;
  }
}

*::-webkit-scrollbar-thumb
{
  background-color: #f4e1b9;
	background-image: url('./public/scrollbar-image.svg');
  background-position: center;
  background-repeat: no-repeat;
  margin: 2px;
	border: 3px solid #000000;
}
/*---------------------------- fonts -----------------*/

/* Anime Ace */
@font-face {
  font-family: 'Anime Ace';
  src: url('/fonts/anime_ace_bb/animeace2bb_tt/animeace2_bld.ttf')
    format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Anime Ace';
  src: url('/fonts/anime_ace_bb/animeace2bb_tt/animeace2_ital.ttf')
    format('truetype');
  font-weight: lighter;
  font-style: italic;
}

@font-face {
  font-family: 'Anime Ace';
  src: url('/fonts/anime_ace_bb/animeace2bb_tt/animeace2_reg.ttf')
    format('truetype');
  font-weight: lighter;
  font-style: normal;
}

/* Bangers */
@font-face {
  font-family: 'Bangers';
  src: url(/fonts/Bangers/Bangers-Regular.ttf) format('truetype');
}

/* Japanese robot */
@font-face {
  font-family: 'Japanese Robot';
  src: url(/fonts/japanese-robot/JapaneseRobot.ttf) format('truetype');
  font-style: normal;
}

@font-face {
  font-family: 'Japanese Robot';
  src: url('/fonts/japanese-robot/JapaneseRobotItalic.ttf') format('truetype');
  font-style: italic;
}

/* Kosugi Maru */
@font-face {
  font-family: 'Kosugi Maru';
  src: url('/fonts/Kosugi_Maru/KosugiMaru-Regular.ttf') format('truetype');
}

/* ----------------------------------- fonts end ---------------------------------------- */


html {
  scroll-behavior: smooth;
}
/* write vannila css below */

/* ---------------------------------------- NAVBAR -------------------------------------- */
nav::after {
  content: '';
  border: 0.188rem solid black;
}

nav ul li a {
  font-family: 'Anime Ace';
  font-weight: bold;
  font-style: normal;
}
.fonto {
  font-family: 'Anime Ace';
  font-weight: bold;
  font-style: normal;
}
.kosigu {
  font-family: 'Kosugi Maru';
}

.navlist {
  z-index: 20;
}

.navlist a {
  transition: 0.5s;
}

.navlist a:hover {
  color: white;
}

.dropdown_item-1 {
  transform-origin: top center;
  animation: slideRight 700ms;
}

@keyframes slideRight {
  0% {
    opacity: 0;
    transform: translateX(100px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes mascot {
  0%{
      transform: translateY(0.5rem);
  }
  25%{
      transform: translateY(-0.5rem);
  }
  50%{
      transform: translateY(0.5rem);
  }
  75%{
      transform: translateY(-0.5rem);
  }
  100%{
      transform: translateY(0.5rem);
  }
}

/* navbar ends */

/* Hero Text Items */
.rebase-head {
  font-family: 'Japanese Robot';
}

.head-one {
  -webkit-text-stroke: 0.3rem black;
  text-shadow: -0.6rem 0.6rem black;
}

.hero-vol {
  font-family: 'Passion One', sans-serif;
  font-weight: bold;
}

/* ------------------- Landing page -----------------------------------*/

@media screen and (max-width: 639px){
  #compland{
    display: none;
  }
}

.moblinks ul li a img{
  cursor: pointer;
  transition: 0.5s;
}

.moblinks ul li a img:hover{
  transform: scale(1.1);
}

#socialcompu ul li a img{
  transition: 0.5s;
}

#socialcompu ul li a img:hover{
  transform: scale(1.2);
}
/* --------------------- PRIZES SECTION BEGINING------------------------------- */
.stack {
  display: grid;
}

.heading {
  color: #e82338;
  font-family: 'Bangers';
  font-size: 7rem;
  text-shadow: 4px 4px black;
  -webkit-text-stroke: 4px black;
  /* text-shadow: 0.35vw 0.25vw 0px black; */
  text-align: start;
  letter-spacing: 0.3vw;
  /* margin: 0rem 0rem 0rem 3rem; */
  z-index: 1;
}
.prizes_page_no {
  position: absolute;
  text-align: end;
  color: #e82338;
  font-family: 'Japanese Robot', sans-serif;
  margin: 3vh 10vw 0 60vw;
  font-size: 2.6vw;
  -webkit-text-stroke: 0.195vw #000;
}

.imgDiv {
  height: 85%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -4%;
  margin-left: 4vw;
}

img {
  height: 100%;
  width: auto;
  align-self: center;
}

@media screen and (max-width: 805px) {
  .prizes_page_no {
    color: #e82338;
    font-family: 'Japanese Robot', sans-serif;
    margin: 3vh 10vw 0 70vw;
    font-size: 3vw;
    -webkit-text-stroke: 0.2.3vw #000;
  }
  .heading {
    -webkit-text-stroke-width: 0.6vw;
    font-size: 14vw;
    text-align: start;
    /* margin: 0rem 0rem 0rem 1rem; */
  }
  .img {
    width: 100%;
  }
  .imgDiv {
    height: 100%;
    width: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}
/* ... */

